--- a/galeria.html
+++ b/galeria.html
@@ -188,7 +188,7 @@
       <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="0300MB1GT88K82GTH">
-      <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-30"></button>
+      <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/030.webp);" data-target="carousel-item-30"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
 
@@ -235,51 +235,51 @@
   <div class="expansion"  style="background-image: url(./assets/expansion002_icon.webp);"></div>
   <div class="contenedorcolores">
 
-    <div class="carta-wrapper" data-pass="037" >
+    <div class="carta-wrapper" data-pass="0370MBMTJU883F5GTH" >
       <button  class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/037.webp);" data-target="carousel-item-37"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="038">
+    <div class="carta-wrapper" data-pass="0380MBMTJU883F24LL">
       <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/038.webp);" data-target="carousel-item-38"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="039">
+    <div class="carta-wrapper" data-pass="0390MBMT5U883THY88">
       <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/039.webp);" data-target="carousel-item-39"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="040">
+    <div class="carta-wrapper" data-pass="0400MBMT84PP3F5211">
       <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/040.webp);" data-target="carousel-item-40"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="041">
+    <div class="carta-wrapper" data-pass="0410MBMTJG88320000">
       <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-41"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="042">
+    <div class="carta-wrapper" data-pass="0420MBMTHU88HJM875">
       <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-42"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="043">
+    <div class="carta-wrapper" data-pass="0430MBMT54003FRTTG">
       <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-43"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="044">
+    <div class="carta-wrapper" data-pass="0440MBMTJUPO025GTH">
       <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-44"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="045">
+    <div class="carta-wrapper" data-pass="0450MBMTJU883854IO">
       <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-45"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="046">
+    <div class="carta-wrapper" data-pass="0460MBMTJU88892GTH">
       <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/046.webp);" data-target="carousel-item-46"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-        <div class="carta-wrapper" data-pass="047">
+        <div class="carta-wrapper" data-pass="0470MBMTJU885HTAAH">
       <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-47"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="048">
+    <div class="carta-wrapper" data-pass="0480MBMTJ7886895LO">
       <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-48"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
@@ -289,39 +289,39 @@
 
   <div class="contenedorcolores" >
 
-    <div class="carta-wrapper" data-pass="049">
+    <div class="carta-wrapper" data-pass="0490MBMT00083F5UTH">
       <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/049.webp);" data-target="carousel-item-49"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
-    <div class="carta-wrapper" data-pass="050">
+    <div class="carta-wrapper" data-pass="050AMBMTJU88TG001H">
       <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/050.webp);" data-target="carousel-item-50"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
-    <div class="carta-wrapper" data-pass="051">
+    <div class="carta-wrapper" data-pass="0510MBMTJU883F52PP">
       <button class="cartaejemplo plata" data-lazy="true"  data-style="background-image: url(./assets/cartas/MINIATURAS/051.webp);" data-target="carousel-item-51"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
-    <div class="carta-wrapper" data-pass="052">
+    <div class="carta-wrapper" data-pass="0520MBMT55YHKF5G4H">
       <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-52"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
-    <div class="carta-wrapper" data-pass="053">
+    <div class="carta-wrapper" data-pass="0530MBMTJU8834UGTH">
       <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-53"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
-    <div class="carta-wrapper" data-pass="054">
+    <div class="carta-wrapper" data-pass="0540MBMTJJU83F5GTF">
       <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-54"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
-        <div class="carta-wrapper" data-pass="055">
+        <div class="carta-wrapper" data-pass="0550MBMTHU888555TH">
       <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/055.webp);" data-target="carousel-item-55"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
-    <div class="carta-wrapper" data-pass="056">
+    <div class="carta-wrapper" data-pass="0560MBMT5588UJHG0H">
       <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-56"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
-    <div class="carta-wrapper" data-pass="057">
+    <div class="carta-wrapper" data-pass="0570MBMTJU87JF53TH">
       <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-57"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
@@ -331,7 +331,7 @@
 
   <div class="contenedorcolores">
 
-    <div class="carta-wrapper" data-requiere-cantidad="10" data-pass="058">
+    <div class="carta-wrapper" data-requiere-cantidad="10" data-pass="058OTHERCATFORCOLLECTTED">
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas//MINIATURAS/058.webp);" data-target="carousel-item-58"></button>
       <div class="overlay-bloqueo overespecial"  data-cartel="<p> <b> CONSIGUE 10 CARTAS DE  MAULLIDO TROPICAL</b> <br> para desbloquear esta carta. </p>"> </div>
     </div>
@@ -339,7 +339,7 @@
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/060.webp);" data-target="carousel-item-60"></button>
       <div class="overlay-bloqueo overespecial" data-requiere='["050","051","052"]' data-cartel="<p> Necesitas a: <br> <b>●MICHI MAPA</b> <br> <b>●MICHI AVENTURERO</b> <br> <b>●MICHI TEMPLO PERDIDO</b> <br> para desbloquear esta carta. </p>"  ></div>
     </div>
-    <div class="carta-wrapper" data-pass="060">
+    <div class="carta-wrapper" data-pass="0604DV3N7UR315L4ND">
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/060.webp);" data-target="carousel-item-60"></button>
       <div class="overlay-bloqueo overespecial" data-requiere='["050","051","052"]' data-cartel="<p> Necesitas a: <br> <b>●MICHI MAPA</b> <br> <b>●MICHI CAZA TESOROS</b> <br> <b>●MICHI PIRATA</b> <br> para desbloquear esta carta. </p>"  ></div>
     </div>
@@ -860,7 +860,7 @@
               animation: animacion 0.5s steps(4) forwards infinite;
               background-size: 1236px 450px;
           "></div>
-           <div  data-lazy="true" class="codigoqrdecarta QRRARO" style="background-image: url(./assets/cartas/RARAS/019/0019qr.webp);"> </div> 
+           <div  data-lazy="true" class="codigoqrdecarta QRRARO" style="background-image: url(./assets/cartas/RARAS/019/019_QR.webp);"> </div> 
 
             </div>
           </div>
@@ -885,7 +885,7 @@
                 <img loading="lazy" class="sombra" src="assets/cartas/RARAS/020/0020PAPEL.webp"  />
                 <img loading="lazy" class="bordecarta">
                 
-                <div data-lazy="true" class="codigoqrdecarta QRRARO" style="background-image: url(./assets/cartas/RARAS/020/020QR.webp);"> </div> 
+                <div data-lazy="true" class="codigoqrdecarta QRRARO" style="background-image: url(./assets/cartas/RARAS/020/020_QR.webp);"> </div> 
 
             </div>
           </div>
@@ -1006,7 +1006,7 @@
               animation: animacion 0.5s steps(4) forwards infinite;
               background-size: 1236px 450px;
           "></div>
-             <div data-lazy="true" class="codigoqrdecarta QRRARO" style="background-image: url(./assets/cartas/RARAS/024/024_QR.webp);"> </div> 
+             <div data-lazy="true" class="codigoqrdecarta QRRARO" style="background-image: url(./assets/cartas/RARAS/025/025_QR.webp);"> </div> 
 
             </div>
           </div>
@@ -1050,7 +1050,7 @@
                 animation: animacion 0.3s steps(4) forwards infinite;
                 background-size: 1236px 450px;
             "></div>
-                <div data-lazy="true" class="codigoqrdecarta QRRARO" style="background-image: url(./assets/cartas/RARAS/);"> </div> 
+                <div data-lazy="true" class="codigoqrdecarta QRRARO" style="background-image: url(./assets/cartas/RARAS/027_QR.webp);"> </div> 
 
             </div>
           </div>
@@ -1094,6 +1094,36 @@
           </div>
         </div>
 
+                <!--------------------------------------030---------------------------------------> 
+
+
+        <div class="carousel-item Craro" id="carousel-item-30">
+                        <p class="textorareza"> MICHI PARACAIDISTA <br> ● MICHI-BOX ●</p>
+                        <P class="textorareza PRARO" >RARA </P>
+          <div class="tarjeta">
+            <div class="carta frente" data-circle="circle4 circle1 circle2">
+              <img loading="lazy" class="medio" src="assets/cartas/RARAS/030/030_fondo.webp" />
+                            <div class="lineascolores" style="z-index: 9; transform: rotate(35deg) scale(1.6); filter: blur(10px);"></div>  
+
+              <div data-lazy="true" class="michi lazy-michi" data-style="
+              z-index: 10;
+              background-image: url('/assets/cartas/RARAS/030/030_fondo_animacion.webp'); 
+              animation: animacion 0.5s steps(4) forwards infinite;
+              background-size: 1236px 450px;
+          "></div>
+          <img loading="lazy" class="michi" src="assets/cartas/RARAS/030/030_nube_abajo_01.webp" style=" z-index: 10;  animation: desplazamientovertical  15s linear infinite">
+          <img loading="lazy" class="michi" src="assets/cartas/RARAS/030/030_nube_abajo_02.webp" style=" z-index: 10;  animation: desplazamientovertical  17s linear infinite">
+          <img loading="lazy" class="michi" src="assets/cartas/RARAS/030/030_michi.webp" style=" z-index: 11;  animation: flotar 1.4s ease-in-out alternate infinite">
+          <img loading="lazy" class="michi" src="assets/cartas/RARAS/030/030_nube_arriba_01.webp" style=" z-index: 12;  animation: desplazamientovertical  16s linear infinite">
+          <img loading="lazy" class="michi" src="assets/cartas/RARAS/030/030_nube_arriba_02.webp" style=" z-index: 12;  animation: desplazamientovertical  18s linear infinite">
+
+                          <img loading="lazy" class="sombra" src="assets/cartas/RARAS/030/030_papel.webp"   />
+
+             <div data-lazy="true" class="codigoqrdecarta QRRARO" style="background-image: url(./assets/cartas/RARAS/030/030_QR.webp);"> </div> 
+
+            </div>
+          </div>
+        </div>
 
               <!--------------------------------049---------------------------------------------> 
        
