--- a/galeria.html
+++ b/galeria.html
@@ -252,23 +252,23 @@
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="0410MBMTJG88320000">
-      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-41"></button>
+      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/041.webp);" data-target="carousel-item-41"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="0420MBMTHU88HJM875">
-      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-42"></button>
+      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/042.webp);" data-target="carousel-item-42"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="0430MBMT54003FRTTG">
-      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-43"></button>
+      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/043.webp);" data-target="carousel-item-43"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="0440MBMTJUPO025GTH">
-      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-44"></button>
+      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/044.webp);" data-target="carousel-item-44"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="0450MBMTJU883854IO">
-      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-45"></button>
+      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/045.webp);" data-target="carousel-item-45"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="0460MBMTJU88892GTH">
@@ -276,11 +276,11 @@
       <div class="overlay-bloqueo overnormal"></div>
     </div>
         <div class="carta-wrapper" data-pass="0470MBMTJU885HTAAH">
-      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-47"></button>
+      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/047.webp);" data-target="carousel-item-47"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="0480MBMTJ7886895LO">
-      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-48"></button>
+      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/048.webp);" data-target="carousel-item-48"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
 
@@ -336,8 +336,8 @@
       <div class="overlay-bloqueo overespecial"  data-cartel="<p> <b> CONSIGUE 10 CARTAS DE  MAULLIDO TROPICAL</b> <br> para desbloquear esta carta. </p>"> </div>
     </div>
     <div class="carta-wrapper" data-pass="059">
-      <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/060.webp);" data-target="carousel-item-60"></button>
-      <div class="overlay-bloqueo overespecial" data-requiere='["050","051","052"]' data-cartel="<p> Necesitas a: <br> <b>●MICHI MAPA</b> <br> <b>●MICHI AVENTURERO</b> <br> <b>●MICHI TEMPLO PERDIDO</b> <br> para desbloquear esta carta. </p>"  ></div>
+      <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/059.webp);" data-target="carousel-item-59"></button>
+      <div class="overlay-bloqueo overespecial" data-requiere='["0410MBMTJG88320000","0440MBMTJUPO025GTH","0450MBMTJU883854IO","0460MBMTJU88892GTH"]' data-cartel="<p> Necesitas a: <br> <b>●MICHI CAMUFLADO</b> <br> <b>●MICHI IMPOSTOR</b> <br> <b>●MICHI UBER</b> <br> <b>●MICHI CAZADOR</b> <br> para desbloquear esta carta. </p>"  ></div>
     </div>
     <div class="carta-wrapper" data-pass="0604DV3N7UR315L4ND">
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/060.webp);" data-target="carousel-item-60"></button>
@@ -827,6 +827,63 @@
             </div>
           </div>
         </div>
+                                                              <!-------------------------------------041---------------------------------------->  
+         <div class="carousel-item Cnormal" id="carousel-item-41" >
+                                  <p class="textorareza"> MICHI CAMUFLADO <br> ● MAULLIDO TROPICAL ●</p>
+                        <P class="textorareza PNORMAL" > NORMAL </P>
+          <div class="tarjeta">
+            <div class="carta frente" data-circle="circle4">
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/041.webp" />
+           <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido lazy-michi"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
+                </div>                  
+            </div>
+          </div>
+        </div>
+                               <!-------------------------------------043---------------------------------------->  
+         <div class="carousel-item Cnormal" id="carousel-item-43" >
+                                  <p class="textorareza"> MICHI BRONCEADO <br> ● MAULLIDO TROPICAL ●</p>
+                        <P class="textorareza PNORMAL" > NORMAL </P>
+          <div class="tarjeta">
+            <div class="carta frente" data-circle="circle4">
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/043.webp" />
+           <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido lazy-michi"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
+                </div>                  
+            </div>
+          </div>
+        </div>
+                                              <!-------------------------------------044---------------------------------------->  
+         <div class="carousel-item Cnormal" id="carousel-item-44" >
+                                  <p class="textorareza"> MICHI IMPOSTOR <br> ● MAULLIDO TROPICAL ●</p>
+                        <P class="textorareza PNORMAL" > NORMAL </P>
+          <div class="tarjeta">
+            <div class="carta frente" data-circle="circle4">
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/044.webp" />
+           <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido lazy-michi"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
+                </div>                  
+            </div>
+          </div>
+        </div>
+                                                      <!-------------------------------------045---------------------------------------->  
+         <div class="carousel-item Cnormal" id="carousel-item-44" >
+                                  <p class="textorareza"> MICHI UBER <br> ● MAULLIDO TROPICAL ●</p>
+                        <P class="textorareza PNORMAL" > NORMAL </P>
+          <div class="tarjeta">
+            <div class="carta frente" data-circle="circle4">
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/045.webp" />
+           <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido lazy-michi"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
+                </div>                  
+            </div>
+          </div>
+        </div>
+        
                                               <!-------------------------------------046---------------------------------------->  
          <div class="carousel-item Cnormal" id="carousel-item-46" >
                                   <p class="textorareza"> MICHI FLOR<br> ● MAULLIDO TROPICAL ●</p>
@@ -834,6 +891,20 @@
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
               <img loading="lazy" class="medio" src="assets/cartas/NORMALES/046.webp" />
+           <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido lazy-michi"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
+                </div>                  
+            </div>
+          </div>
+        </div>
+                                                      <!-------------------------------------048---------------------------------------->  
+         <div class="carousel-item Cnormal" id="carousel-item-48" >
+                                  <p class="textorareza"> MICHI CAZADOR <br> ● MAULLIDO TROPICAL ●</p>
+                        <P class="textorareza PNORMAL" > NORMAL </P>
+          <div class="tarjeta">
+            <div class="carta frente" data-circle="circle4">
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/048.webp" />
            <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido lazy-michi"></DIV>
                    <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
@@ -1385,6 +1456,33 @@
   </div>
 </div>
 
+        <!-----------------------------------------059------------------------------------>
+
+<div class="carousel-item Clegendario" id="carousel-item-59">
+                        <p class="textorareza"> MICHI Y AMIGOS <br> ● MAULLIDO TROPICAL ● </p>
+                        <P class="textorareza PLEGENDARIO" >LEGENDARIA </P>
+  <div class="tarjeta">
+    <div class="carta frente" data-circle="circle5 circle4">
+      <div class="michi" style="background-color: rgb(88, 72, 2);"></div>
+      <div class="lineascolores" style="z-index: 9; transform: rotate(-80deg) scale(1.75); filter:sepia(1) saturate(3)"></div>  
+          <img loading="lazy" class="michi" src="./assets/cartas/LEGENDARIAS/059/059_oro.webp" style="z-index: 10;" />
+
+      <div data-lazy="true" class="michi lazy-michi" data-style="
+        z-index: 11;
+        background-image: url('/assets/cartas/LEGENDARIAS/059/059_animacion.webp'); 
+        animation: animacion 0.5s steps(4) forwards infinite, blur alternate-reverse 5s infinite;
+        background-size: 1236px 450px;
+  
+    "></div> 
+    <img loading="lazy" class="michi" src="./assets/cartas/LEGENDARIAS/059/059_rama.webp" style="z-index: 12; animation: blur alternate 5s infinite;"/>
+    <img loading="lazy" class="michi" src="assets/cartas/LEGENDARIAS/059/059_papel_arriba.webp" style="z-index: 13;" />
+           <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR CARTAS LEGENDARIAS</p>
+                </div> 
+    </div>
+  </div>
+</div>
 
         <!-----------------------------------------060------------------------------------>
 
