--- a/galeria.html
+++ b/galeria.html
@@ -335,9 +335,9 @@
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas//MINIATURAS/058.webp);" data-target="carousel-item-58"></button>
       <div class="overlay-bloqueo overespecial"  data-cartel="<p> <b> CONSIGUE 10 CARTAS DE  MAULLIDO TROPICAL</b> <br> para desbloquear esta carta. </p>"> </div>
     </div>
-    <div class="carta-wrapper" data-pass="059">
+    <div class="carta-wrapper" data-pass="michindriends059MT">
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/059.webp);" data-target="carousel-item-59"></button>
-      <div class="overlay-bloqueo overespecial" data-requiere='["0410MBMTJG88320000","0440MBMTJUPO025GTH","0450MBMTJU883854IO","0460MBMTJU88892GTH"]' data-cartel="<p> Necesitas a: <br> <b>●MICHI CAMUFLADO</b> <br> <b>●MICHI IMPOSTOR</b> <br> <b>●MICHI UBER</b> <br> <b>●MICHI CAZADOR</b> <br> para desbloquear esta carta. </p>"  ></div>
+      <div class="overlay-bloqueo overespecial" data-requiere='["0410MBMTJG88320000","0440MBMTJUPO025GTH","0450MBMTJU883854IO","0480MBMTJ7886895LO"]' data-cartel="<p> Necesitas a: <br> <b>●MICHI CAMUFLADO</b> <br> <b>●MICHI IMPOSTOR</b> <br> <b>●MICHI UBER</b> <br> <b>●MICHI CAZADOR</b> <br> para desbloquear esta carta. </p>"  ></div>
     </div>
     <div class="carta-wrapper" data-pass="0604DV3N7UR315L4ND">
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/060.webp);" data-target="carousel-item-60"></button>
