--- a/galeria.html
+++ b/galeria.html
@@ -309,22 +309,12 @@
       <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-53"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
-    <div class="carta-wrapper" data-pass="0540MBMTJJU83F5GTF">
-      <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-54"></button>
-      <div class="overlay-bloqueo overraro"></div>
-    </div>
+
         <div class="carta-wrapper" data-pass="0550MBMTHU888555TH">
       <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/055.webp);" data-target="carousel-item-55"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
-    <div class="carta-wrapper" data-pass="0560MBMT5588UJHG0H">
-      <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-56"></button>
-      <div class="overlay-bloqueo overraro"></div>
-    </div>
-    <div class="carta-wrapper" data-pass="0570MBMTJU87JF53TH">
-      <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-57"></button>
-      <div class="overlay-bloqueo overraro"></div>
-    </div>
+
 
   </div>
 
@@ -335,7 +325,7 @@
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas//MINIATURAS/058.webp);" data-target="carousel-item-58"></button>
       <div class="overlay-bloqueo overespecial"  data-cartel="<p> <b> CONSIGUE 10 CARTAS DE  MAULLIDO TROPICAL</b> <br> para desbloquear esta carta. </p>"> </div>
     </div>
-    <div class="carta-wrapper" data-pass="michindriends059MT">
+    <div class="carta-wrapper" data-pass="michinFriends059MT">
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/059.webp);" data-target="carousel-item-59"></button>
       <div class="overlay-bloqueo overespecial" data-requiere='["0410MBMTJG88320000","0440MBMTJUPO025GTH","0450MBMTJU883854IO","0480MBMTJ7886895LO"]' data-cartel="<p> Necesitas a: <br> <b>●MICHI CAMUFLADO</b> <br> <b>●MICHI IMPOSTOR</b> <br> <b>●MICHI UBER</b> <br> <b>●MICHI CAZADOR</b> <br> para desbloquear esta carta. </p>"  ></div>
     </div>
@@ -343,14 +333,7 @@
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/060.webp);" data-target="carousel-item-60"></button>
       <div class="overlay-bloqueo overespecial" data-requiere='["050","051","052"]' data-cartel="<p> Necesitas a: <br> <b>●MICHI MAPA</b> <br> <b>●MICHI CAZA TESOROS</b> <br> <b>●MICHI PIRATA</b> <br> para desbloquear esta carta. </p>"  ></div>
     </div>
-    <div class="carta-wrapper" data-pass="061">
-      <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-61"></button>
-      <div class="overlay-bloqueo overespecial" data-requiere='["050","051","052"]' data-cartel="<p> Necesitas a: <br> <b>●???</b> <br> <b>●???</b> <br> <b>●???</b> <br> para desbloquear esta carta. </p>"  ></div>
-    </div>
-    <div class="carta-wrapper" data-pass="062">
-      <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-62"></button>
-      <div class="overlay-bloqueo overespecial" data-requiere='["053","054","055"]' data-cartel="<p> Necesitas a: <br> <b>●???</b> <br> <b>●???</b> <br> <b>●???</b> <br> para desbloquear esta carta. </p>"  ></div>
-    </div>
+
 
   </div>
   <div class="separacion"></div>
