--- a/galeria.html
+++ b/galeria.html
@@ -302,7 +302,7 @@
       <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="0520MBMT55YHKF5G4H">
-      <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-52"></button>
+      <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/052.webp);" data-target="carousel-item-52"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="0530MBMTJU8834UGTH">
@@ -1244,6 +1244,28 @@
                 <img loading="lazy" class="michi" src="assets/cartas/RARAS/051/051_B2.webp" style=" z-index: 12;  animation: desplazamientolateral 13s ease-in-out reverse infinite">
                 <img loading="lazy" class="sombra" src="assets/cartas/RARAS/051/051_D.webp"   />
                  <div data-lazy="true" class="codigoqrdecarta QRRARO" style="background-image: url(./assets/cartas/RARAS/051/051_QR.webp);"> </div> 
+
+            </div>
+          </div>
+        </div>
+
+<!-------------------------------------052---------------------------------------->        
+
+                 <div class="carousel-item Craro" id="carousel-item-52">
+                        <p class="textorareza"> MICHI SALVAJE <br> ● MAULLIDO TROPICAL ●</p>
+                        <P class="textorareza PRARO" >RARA </P>
+          <div class="tarjeta">
+            <div class="carta frente" data-circle="circle4">
+
+              <div data-lazy="true" class="michi lazy-michi" data-style="
+                z-index: 10;
+                background-image: url('/assets/cartas/RARAS/052/052_animacion.webp'); 
+                animation: animacion 0.5s steps(4) forwards infinite, blur alternate-reverse 5s infinite;
+                background-size: 1236px 450px;
+            "></div> 
+                <img loading="lazy" class="michi" src="assets/cartas/RARAS/052/052_papel_arriba.webp" style=" z-index: 13;">
+                <img loading="lazy" class="michi" src="assets/cartas/RARAS/052/052_cerca.webp" style=" z-index: 11;  animation: blur alternate 5s infinite;">
+                <div data-lazy="true" class="codigoqrdecarta QRRARO" style="background-image: url(./assets/cartas/RARAS/023/023_QR.webp);"> </div> 
 
             </div>
           </div>
