--- a/galeria.html
+++ b/galeria.html
@@ -306,7 +306,7 @@
       <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="0530MBMTJU8834UGTH">
-      <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-53"></button>
+      <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/053.webp);" data-target="carousel-item-53"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
 
@@ -331,7 +331,7 @@
     </div>
     <div class="carta-wrapper" data-pass="0604DV3N7UR315L4ND">
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/060.webp);" data-target="carousel-item-60"></button>
-      <div class="overlay-bloqueo overespecial" data-requiere='["050","051","052"]' data-cartel="<p> Necesitas a: <br> <b>●MICHI MAPA</b> <br> <b>●MICHI CAZA TESOROS</b> <br> <b>●MICHI PIRATA</b> <br> para desbloquear esta carta. </p>"  ></div>
+      <div class="overlay-bloqueo overespecial" data-requiere='["0400MBMT84PP3F5211","0530MBMTJU8834UGTH","0510MBMTJU883F52PP"]' data-cartel="<p> Necesitas a: <br> <b>●MICHI MAPA</b> <br> <b>●MICHI PIRATA</b> <br> <b>●MICHI CAZA TESOROS</b> <br> para desbloquear esta carta. </p>"  ></div>
     </div>
 
 
@@ -1266,6 +1266,24 @@
                 <img loading="lazy" class="michi" src="assets/cartas/RARAS/052/052_papel_arriba.webp" style=" z-index: 13;">
                 <img loading="lazy" class="michi" src="assets/cartas/RARAS/052/052_cerca.webp" style=" z-index: 11;  animation: blur alternate 5s infinite;">
                 <div data-lazy="true" class="codigoqrdecarta QRRARO" style="background-image: url(./assets/cartas/RARAS/052/052_QR.webp);"> </div> 
+
+            </div>
+          </div>
+        </div>
+        <!-------------------------------------053---------------------------------------->        
+
+                 <div class="carousel-item Craro" id="carousel-item-53">
+                        <p class="textorareza"> MICHI CAZA TESOROS <br> ● MAULLIDO TROPICAL ●</p>
+                        <P class="textorareza PRARO" >RARA </P>
+          <div class="tarjeta">
+            <div class="carta frente" data-circle="circle4 circle5">
+                  <img loading="lazy" class="michi" src="assets/cartas/RARAS/053/053_FONDO.webp" style=" z-index: 8;">
+
+                 <div class="lineascolores" style="z-index: 9; transform: rotate(45deg) scale(1.7); filter: hue-rotate(40deg);"></div>          
+
+                <img loading="lazy" class="michi" src="assets/cartas/RARAS/053/053_PAPEL.webp" style=" z-index: 10;">
+
+                <div data-lazy="true" class="codigoqrdecarta QRRARO" style="background-image: url(./assets/cartas/RARAS/053/053_QR.webp);"> </div> 
 
             </div>
           </div>
