--- a/galeria.html
+++ b/galeria.html
@@ -331,7 +331,7 @@
     </div>
     <div class="carta-wrapper" data-pass="0604DV3N7UR315L4ND">
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/060.webp);" data-target="carousel-item-60"></button>
-      <div class="overlay-bloqueo overespecial" data-requiere='["0400MBMT84PP3F5211","0530MBMTJU8834UGTH","0510MBMTJU883F52PP"]' data-cartel="<p> Necesitas a: <br> <b>●MICHI MAPA</b> <br> <b>●MICHI PIRATA</b> <br> <b>●MICHI CAZA TESOROS</b> <br> para desbloquear esta carta. </p>"  ></div>
+      <div class="overlay-bloqueo overespecial" data-requiere='["0400MBMT84PP3F5211","0510MBMTJU883F52PP","0530MBMTJU8834UGTH"]' data-cartel="<p> Necesitas a: <br> <b>●MICHI MAPA</b> <br> <b>●MICHI PIRATA</b> <br> <b>●MICHI CAZA TESOROS</b> <br> para desbloquear esta carta. </p>"  ></div>
     </div>
 
 
