--- a/galeria.html
+++ b/galeria.html
@@ -824,6 +824,21 @@
             </div>
           </div>
         </div>
+
+                            <!-------------------------------------042---------------------------------------->  
+         <div class="carousel-item Cnormal" id="carousel-item-42" >
+                                  <p class="textorareza"> MICHI SUBMARINO <br> ● MAULLIDO TROPICAL ●</p>
+                        <P class="textorareza PNORMAL" > NORMAL </P>
+          <div class="tarjeta">
+            <div class="carta frente" data-circle="circle4">
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/042.webp" />
+           <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido lazy-michi"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
+                </div>                  
+            </div>
+          </div>
+        </div>
                                <!-------------------------------------043---------------------------------------->  
          <div class="carousel-item Cnormal" id="carousel-item-43" >
                                   <p class="textorareza"> MICHI BRONCEADO <br> ● MAULLIDO TROPICAL ●</p>
@@ -874,6 +889,21 @@
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
               <img loading="lazy" class="medio" src="assets/cartas/NORMALES/046.webp" />
+           <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido lazy-michi"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
+                </div>                  
+            </div>
+          </div>
+        </div>
+
+                         <!-------------------------------------047---------------------------------------->  
+         <div class="carousel-item Cnormal" id="carousel-item-47" >
+                                  <p class="textorareza"> MICHI BOX TROPICAL <br> ● MAULLIDO TROPICAL ●</p>
+                        <P class="textorareza PNORMAL" > NORMAL </P>
+          <div class="tarjeta">
+            <div class="carta frente" data-circle="circle4">
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/047.webp" />
            <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido lazy-michi"></DIV>
                    <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
