--- a/quees.html
+++ b/quees.html
@@ -35,6 +35,7 @@ Es imposible completar y descubrir MICHI-BOX si lo hacés solo.
 <br><br><br>
   <b>Idea, Diseño y realización del proyecto:<br> José Ignacio Pyptyk</b>  
 </p>
+      <div class="separacion"></div>
 
                 <DIV class="imagenbannernoticia" data-lazy="true" style="background-image: url(./assets/BANNER_QUEES_MECANICA.webp);"></DIV>
 <p>  
@@ -74,6 +75,10 @@ Estas cartas, al desbloquearlas en la app, te darán acceso a animaciones y efec
 <br></br>Estas son las cartas más difíciles de conseguir, y su rareza se debe a que son el premio por haber completado alguna misión, acción o simplemente por coleccionar un número determinado de gatos.
 Al ser únicas, no se pueden compartir de ninguna forma.
 <br><br>
+Puedes conocer los requisitos de obtención de las cartas tocando en su signo  <b> "?" </b> correspondiente. 
+<br><br>
+<DIV class="imagenbannernoticia" data-lazy="true" style="background-image: url(./assets/BANNER_QUEES_TIPOS_DE_CARTAS_legendarias_requisitos.webp);"></DIV>
+
 
                 <DIV class="imagenbannernoticia" data-lazy="true" style="background-image: url(./assets/BANNER_QUEES_compartir.webp);"></DIV>
 <p> Las únicas cartas que podés compartir a través de un código QR son las cartas de rareza RARA. Podés compartirlas y recibirlas. <br> Al haber muy pocas de estas cartas físicas, los jugadores están obligados a compartirlas para poder completar la colección. </p>
@@ -82,6 +87,8 @@ Al ser únicas, no se pueden compartir de ninguna forma.
 <DIV class="imagenbannernoticia" data-lazy="true" style="background-image: url(./assets/BANNER_QUEES_expansiones.webp);"></DIV>
 <p> Podés navegar por las diferentes expansiones en la galería de la app a través del botón “Expansiones”. Si desbloqueás una carta de otra expansión distinta a la que actualmente figura en tu galería, esta se actualiza automáticamente y te redirige a su respectiva expansión, facilitando la navegación del usuario. </p>
      
+<DIV class="imagenbannernoticia" data-lazy="true" style="background-image: url(./assets/BANNER_QUEES_expansiones_icono.webp);"></DIV>
+<p> Las cartas físicas vienen con una estampilla que identifica a qué expansión corresponden. Si no tiene estampilla, significa que pertenece a la colección base de MICHI-BOX. </p>     
       <div class="separacion"></div>
 
 </div>
