--- a/noticias.html
+++ b/noticias.html
@@ -22,6 +22,8 @@
 
 
       <div class="contenedorQUEESyNOTICIAS">
+        <DIV class="imagenbannernoticia" style="background-image: url(./assets/NOTICIA_005.webp);"></DIV>
+<p> Como muestra de agradecimiento por el apoyo brindado a este proyecto, se entregan 2 tickets de regalo que podrán canjearse en la tienda de la app. <br> Cada ticket equivale a una carta <b>RARA</b> sorpresa de su correspondiente expansión. <BR></BR> NO SE ACEPTAN DEVOLUCIONES <br> NI QUEJAS </p>
 
 <DIV class="imagenbannernoticia" style="background-image: url(./assets/NOTICIA_004.webp);"></DIV>
 <p> <b>● Actualización V2.0.5. </b> <BR></BR> El verano llega con nuevos felinos exóticos y cajas llenas de frescura en esta expansión que nadie pidió, pero todos necesitaban: Maullido Tropical. <BR></BR> Más gatos, más cajas y, por supuesto… ¡más incoherencias! </p>
