--- a/galeria.html
+++ b/galeria.html
@@ -1596,9 +1596,9 @@
    class="carruseldeexpansiones-item lazy-michi" 
    style="background-image: url(./assets/expansion002B_sobre.webp);"></a>
 
-<a href="#MICHIBOX003" onclick="cerrarVentanaExpansiones();" 
+<div href="#MICHIBOX003"  
    class="carruseldeexpansiones-item lazy-michi" 
-   style="background-image: url(./assets/expansion_proximamente_sobre.webp);"></a>
+   style="background-image: url(./assets/expansion_proximamente_sobre.webp);"></div>
         </div>
     <button class="carruseldeexpansiones-btn next" onclick="moverCarruseldeExpansiones(1)">›</button>
       </div>
