--- a/regalos.html
+++ b/regalos.html
@@ -28,13 +28,13 @@
 <div class="opcionesdecompra">
 
 <div class="compra">
-  <div class="imagenproducto" style="background-image: url(./assets/TICKET\ 01.webp);">  </div>
+  <div class="imagenproducto" style="background-image: url(./assets/TICKET\ 01b.webp);">  </div>
   <p class="productodescripcion"> <B>TICKET</B> <br> (CANJEA 1 CARTA DE MICHI-BOX)</p>
   <button class="botonCopiar" data-codigo="020AMB0562HGHYUD5">1 TICKET GRATIS</button>
 </div>
 
 <div class="compra">
-  <div class="imagenproducto" style="background-image: url(./assets/TICKET\ 02_mt.webp);">  </div>
+  <div class="imagenproducto" style="background-image: url(./assets/TICKET\ 02_mt_b.webp);">  </div>
   <p class="productodescripcion"> <B>TICKET</B> <br> (CANJEA 1 CARTA DE MAULLIDO TROPICAL)</p>
   <button class="botonCopiar" data-codigo="0550MBMTHU888555TH">1 TICKET GRATIS</button>
 </div>
