--- a/regalos.html
+++ b/regalos.html
@@ -39,6 +39,18 @@
   <button class="botonCopiar" data-codigo="0550MBMTHU888555TH">1 TICKET GRATIS</button>
 </div>
 
+<div class="compra">
+  <div class="imagenproducto" style="background-image: url(./assets/bigote_falso.webp);">  </div>
+  <p class="productodescripcion"> <B>BIGOTE FALSO</B> <br> (UN BIGOTE FALSO APRA UN GATO)</p>
+  <button class="botonCopiarSINSTOCK" >SIN STOCK</button>
+</div>
+
+<div class="compra">
+  <div class="imagenproducto" style="background-image: url(./assets/PEINE_bigote_falso.webp);">  </div>
+  <p class="productodescripcion"> <B>PEINE PARA BIGOTE</B> <br> (UN PEINE PARA UN BIGOTE FALSO)</p>
+  <button class="botonCopiarSINSTOCK" >SIN STOCK</button>
+</div>
+
 
 
 
