--- a/regalos.html
+++ b/regalos.html
@@ -41,7 +41,7 @@
 
 <div class="compra">
   <div class="imagenproducto" style="background-image: url(./assets/bigote_falso.webp);">  </div>
-  <p class="productodescripcion"> <B>BIGOTE FALSO</B> <br> (UN BIGOTE FALSO APRA UN GATO)</p>
+  <p class="productodescripcion"> <B>BIGOTE FALSO</B> <br> (UN BIGOTE FALSO PARA UN GATO)</p>
   <button class="botonCopiarSINSTOCK" >SIN STOCK</button>
 </div>
 
