--- a/regalos.html
+++ b/regalos.html
@@ -28,27 +28,39 @@
 <div class="opcionesdecompra">
 
 <div class="compra">
-  <div class="imagenproducto" style="background-image: url(./assets/TICKET\ 01b.webp);">  </div>
-  <p class="productodescripcion"> <B>TICKET</B> <br> (CANJEA 1 CARTA DE MICHI-BOX)</p>
+  <div class="imagenproducto" style="background-image: url(./assets/TICKET\ 01.webp);">  </div>
+  <p class="productodescripcion"> <B>TICKET</B> <br><br> (CANJEA 1 CARTA <br> DE MICHI-BOX)</p>
   <button class="botonCopiar" data-codigo="020AMB0562HGHYUD5">1 TICKET GRATIS</button>
 </div>
 
 <div class="compra">
-  <div class="imagenproducto" style="background-image: url(./assets/TICKET\ 02_mt_b.webp);">  </div>
-  <p class="productodescripcion"> <B>TICKET</B> <br> (CANJEA 1 CARTA DE MAULLIDO TROPICAL)</p>
+  <div class="imagenproducto" style="background-image: url(./assets/TICKET\ 02_mt.webp);">  </div>
+  <p class="productodescripcion"> <B>TICKET</B> <br><br> (CANJEA 1 CARTA DE MAULLIDO TROPICAL)</p>
   <button class="botonCopiar" data-codigo="0550MBMTHU888555TH">1 TICKET GRATIS</button>
 </div>
 
 <div class="compra">
+  <div class="imagenproducto" style="background-image: url(./assets/TICKET_dorado.webp);">  </div>
+  <p class="productodescripcion"> <B>TICKET DORADO</B> <br><br> (CANJEA 1 CARTA LEGENDARIA)</p>
+  <button class="botonCopiarSINSTOCK" >NO DISPONIBLE</button>
+</div>
+
+<div class="compra">
+  <div class="imagenproducto" style="background-image: url(./assets/caja_sorpresa.webp);">  </div>
+  <p class="productodescripcion"> <B>CAJA PREMIUM</B> <br><br> (CAJA DE CARTÓN <br> PREMIUM)</p>
+  <button class="botonCopiarSINSTOCK" >NO DISPONIBLE</button>
+</div>
+
+<div class="compra">
   <div class="imagenproducto" style="background-image: url(./assets/bigote_falso.webp);">  </div>
-  <p class="productodescripcion"> <B>BIGOTE FALSO</B> <br> (UN BIGOTE FALSO PARA UN GATO)</p>
-  <button class="botonCopiarSINSTOCK" >SIN STOCK</button>
+  <p class="productodescripcion"> <B>BIGOTE FALSO</B> <br><br> (UN BIGOTE FALSO <br> PARA UN GATO)</p>
+  <button class="botonCopiarSINSTOCK" >NO DISPONIBLE</button>
 </div>
 
 <div class="compra">
   <div class="imagenproducto" style="background-image: url(./assets/PEINE_bigote_falso.webp);">  </div>
-  <p class="productodescripcion"> <B>PEINE PARA BIGOTE</B> <br> (UN PEINE PARA UN BIGOTE FALSO)</p>
-  <button class="botonCopiarSINSTOCK" >SIN STOCK</button>
+  <p class="productodescripcion"> <B>PEINE PARA BIGOTE</B> <br><br> (UN PEINE PARA UN BIGOTE FALSO)</p>
+  <button class="botonCopiarSINSTOCK" >NO DISPONIBLE</button>
 </div>
 
 
